[package]
name = "cf"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
chrono = { version = "0.4.31", features = ["default","serde"] }
color-eyre = "0.6.2"
tracing-error = "0.2.0"
tracing-appender = "0.2.3"
toml = { version = "0.8.8" }
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
axum = { version = "0.7.4", features = [] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
mongodb = "2.8.1"
futures = "0.3.30"

[build-dependencies]